feat: Adjust healing cost and gold mechanics for improved game balance